cleaned some stuff, no big changes

--- a/proto.ipynb
+++ b/proto.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "%load_ext Cython\n",
     "import copt  # cython optimized stuff\n",
+    "import auxinfo\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -44,26 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import cProfile\n",
-    "# cProfile.run('df[\\'datahora\\'].apply(lambda x: datetime.datetime.strptime(str(x), \\'%Y%m%d%H%M\\'))')\n",
-    "# cProfile.run('pd.to_datetime(df[\\'datahora\\'], format=\\'%Y%m%d%H%M\\')')\n",
-    "# cProfile.run('df[\\'datahora\\'].apply(lambda x: i64todt(x))')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['datahora'].apply(lambda x: copt.i64todt(x))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr></hr>"
+    "df['datahora'] = df['datahora'].apply(lambda x: copt.i64todt(x))"
    ]
   },
   {
@@ -74,16 +56,14 @@
    "source": [
     "# Pega apenas os dados de interesse, renomeia as colunas e coloca o datetime de índice\n",
     "data = df[['codigo', 'fechamento_atual', 'volume_financeiro', 'datahora']]\n",
-    "data.columns = ['code', 'close', 'volume', 'datetime']\n",
-    "data.set_index('datetime', inplace=True)"
+    "data = data.rename(columns=auxinfo.colnamestranslation)\n",
+    "data = data.set_index('datetime')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Organiza os dados em .csv separado para cada empresa, já agrupados por dia\n",
@@ -92,19 +72,25 @@
     "\n",
     "companies = data.code.unique()\n",
     "\n",
-    "if not os.path.exists(r'C:\\Users\\aleex\\Desktop\\dados_financas\\companies'):\n",
-    "    os.makedirs(r'C:\\Users\\aleex\\Desktop\\dados_financas\\companies')\n",
+    "if not os.path.exists('data/companies'):\n",
+    "    os.makedirs('data/companies')\n",
     "    \n",
-    "for companie in companies:\n",
-    "    if not os.path.exists(r'C:\\Users\\aleex\\Desktop\\dados_financas\\companies\\{}_1d.csv'.format(companie)):\n",
-    "        df_dumb = data[data['code'] == '{}'.format(companie)]\n",
-    "        df_dumb = df_dumb[['close', 'volume']]\n",
-    "        df_dumb_1d = df_dumb['close'].resample('1D').ohlc() # Transforma em dados diários - fechamento\n",
-    "        df_dumb_volume = df_dumb['volume'].resample('1D').sum() # Transforma em dados diários - volume\n",
-    "        df_dumb_1d = df_dumb_1d.join(df_dumb_volume, how='inner')\n",
-    "        df_dumb_1d.to_csv(r'C:\\Users\\aleex\\Desktop\\dados_financas\\companies\\{}_1d.csv'.format(companie))\n",
+    "for company in companies:\n",
+    "    if not os.path.exists('data/companies/{}_1d.csv'.format(company)):\n",
+    "        auxdf = data[data['code'] == '{}'.format(company)][['close', 'volume']]\n",
+    "        auxdf_1d = auxdf['close'].resample('1D').ohlc() # Transforma em dados diários - fechamento\n",
+    "        auxdf_volume = auxdf['volume'].resample('1D').sum() # Transforma em dados diários - volume\n",
+    "        auxdf_1d = auxdf_1d.join(auxdf_volume, how='inner')\n",
+    "        auxdf_1d.to_csv('data/companies/{}_1d.csv'.format(company))\n",
     "        \n",
-    "    print(companie)"
+    "    print(company)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
